Revert "Add spiffe uri to role and service certs"